--- a/wp/css/style.css
+++ b/wp/css/style.css
@@ -40,6 +40,7 @@ header h1 {
     flex: 1;
     text-align: center;
     padding: 1rem 0;
+    padding-top: 2px;
     cursor: pointer;
     font-weight: bold;
     font-size: 1.5rem;
