--- a/wp/css/style.css
+++ b/wp/css/style.css
@@ -17,9 +17,12 @@ header {
     width: 100%;
     top: 0;
     z-index: 1000;
+    padding-top: 25px;
+    padding-bottom: 17px;
 }
 
 header h1 {
+
     font-size: 2rem;
 }
 
@@ -40,7 +43,7 @@ header h1 {
     flex: 1;
     text-align: center;
     padding: 1rem 0;
-    padding-top: 2px;
+    padding-top: 20px;
     cursor: pointer;
     font-weight: bold;
     font-size: 1.5rem;
