--- a/wp/css/login-contact.css
+++ b/wp/css/login-contact.css
@@ -68,3 +68,20 @@
     /* 480px以下に適用されるCSS（スマホ用） */
 
 }
+
+.home-button {
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
+    background-color: brown;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    z-index: 1000;
+}
+
+.home-button:hover {
+    background-color: darkorange;
+}
