--- a/wp/css/result.css
+++ b/wp/css/result.css
@@ -150,18 +150,18 @@ footer {
 }
 
 .export-Word {
-    position: fixed;
-    bottom: 80px;
-    /* フッターの上に配置 */
+    /*position: fixed;*/
+    bottom: 300px;
     right: 30px;
     background-color: #007bff;
     color: white;
     border: none;
     padding: 0.75rem 1.5rem;
     border-radius: 5px;
-    font-size: 1rem;
+    font-size: 2rem;
     cursor: pointer;
-    z-index: 950;
+    margin-top: 5rem;
+
 }
 
 .export-Word:hover {
@@ -208,4 +208,8 @@ footer {
         padding-right: 10px;
         height: 50px;
     }
+}
+
+h1 {
+    padding-top: 6rem;
 }
